tests/baselines/reference/jsFileCompilationExportAssignmentSyntax.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' which is one of the input files.
tests/cases/compiler/a.js(1,1): error TS8003: 'export=' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' which is one of the input files.
==== tests/cases/compiler/a.js (1 errors) ====
    export = b;
    ~~~~~~~~~~~
!!! error TS8003: 'export=' can only be used in a .ts file.